<resources>
    <string name="app_name">SadaPayHomeExercize</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>

    <string name="pref_key_dark_mode">dark_mode</string>

    <string-array name="pref_dark_mode_labels">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="pref_dark_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="trending">Trending</string>
    <string name="settings">Settings</string>
    <string name="something_went_worng">Something went worng..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
    <string name="retry">RETRY</string>


</resources>