<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_dark_mode_labels"
        android:entryValues="@array/pref_dark_mode_values"
        android:key="@string/pref_key_dark_mode"
        android:summary="Select a dark or light theme"
        android:title="Night mode" />

</PreferenceScreen>